# artifacts/api-server/src/routes/index.ts
@@ -2,13 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import matchesRouter from "./matches";
 import leaguesRouter from "./leagues";
-import predictionsRouter from "./predictions";
+import oddsRouter from "./odds";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(matchesRouter);
 router.use(leaguesRouter);
-router.use(predictionsRouter);
+router.use(oddsRouter);
 
 export default router;
